# data_analysis_utils

./: .gitignore  README.md  install_git_repo.md  pyproject.toml  requirements.txt  setup.py
apps/: APP_DataAnalyzer.py  data_analyzer_app.py
data/: US_FL_IL_2020_to_2025_Weekly_googtrendcoffeesearch.csv
examples/: analyze_dataset_quickstart.ipynb  analyze_dataset_quickstart_II copy.ipynb  analyze_dataset_quickstart_II.ipynb  binner_quickstart.ipynb  compare_columns_quickstart.ipynb
src/data_analysis_utils/: ANOVA.py  AnalyzeDataset.py  BinnerClass.py  Chi2.py  Clustering.py  Coefficient.py  Combinators.py  CompareColumns.py  Consumer_Habits_file_loader.py  ExperimentalClassificationHelperFuntions.py  HyperparameterTuning.py  MuEstimator.py  PlotClass.py  PoissonSalesForecasting.py  ProbabilisticModeling.py  RegressionOrdinalizer.py  TTests.py  UnivariateNormal.py  __init__.py  utils_APP_DataAnalyzer.py  utils_Analyze_Reviews.py
src/data_analysis_utils/data/: __init__.py
tests/: test_analyze_dataset.py  test_binning_metrics.py  test_chi2.py  test_coefficient.py  test_full_dataset_analysis.py  test_instruction_normalization.py  test_kruskal_assumptions.py  test_supercategory_metadata.py  test_target_visualization_autofit.py  test_two_sample_t_tests.py
