[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis-utils"
version = "0.1.0"
description = "Reusable statistical data analysis helpers and quickstart materials."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
]

[project.optional-dependencies]
app = [
    "streamlit",
]
dev = [
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]
